Fixed Opacity on iOS

--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ p {
 }
 
 .parallax {
-	height: 100%;
+	height: 500px;
 	width: 80;
 	
 	background-attachment: fixed;
@@ -58,7 +58,7 @@ p {
 .parcont { /* parallax container */
 	display: inline-block;
 
-	padding: 48px;
+	padding: 24px;
 	background: rgb(224, 224, 224, 0.9);
 	
 	position: relative;
@@ -134,9 +134,20 @@ hr {
 }
 
 /* Tablet Size---------------------------------------------------------------------------- */
+@media screen and (max-width: 800px) {
+	.parcont {
+		background: rgb(224, 224, 224, 1);
+		padding: 12px;
+		top: 50%;
+		left: 50%;
+	}
+}
 @media screen and (max-width: 768px) {
 	html {
 		overflow-x: hidden;
+	}
+	p {
+		font-size: 12px;
 	}
     ul.sidenav {
         width: 100%;
@@ -158,9 +169,13 @@ hr {
 	}
 	.parallax {
         background-attachment: scroll;
+		background-size: cover;
     }
 	.parcont {
 		background: rgb(224, 224, 224, 1);
+		padding: 8px;
+		top: 50%;
+		left: 50%;
 	}
 }
 
@@ -185,6 +200,6 @@ hr {
 		margin-top: -24px;
 	}
 	.topper {
-    word-spacing: -14px;
+		word-spacing: -14px;
 	}
 }
